testdata/baselines/reference/submodule/compiler/unusedVariablesWithUnderscoreInForOfLoop.errors.txt
unusedVariablesWithUnderscoreInForOfLoop.ts(15,21): error TS6133: 'b' is declared but its value is never read.
unusedVariablesWithUnderscoreInForOfLoop.ts(17,17): error TS6133: 'a' is declared but its value is never read.
unusedVariablesWithUnderscoreInForOfLoop.ts(19,10): error TS6199: All variables are unused.
unusedVariablesWithUnderscoreInForOfLoop.ts(23,23): error TS6133: 'b' is declared but its value is never read.
unusedVariablesWithUnderscoreInForOfLoop.ts(25,19): error TS6133: 'a' is declared but its value is never read.
unusedVariablesWithUnderscoreInForOfLoop.ts(27,10): error TS6199: All variables are unused.


==== unusedVariablesWithUnderscoreInForOfLoop.ts (6 errors) ====
    function t1() {
        for (const [_a, b] of [['key', 1]]) {
            console.log(b);
        }
    
        for (const [a, _b] of [['key', 1]]) {
            console.log(a);
        }
    
        for (const [_a, _b] of [['key', 1]]) {}
    }
    
    
    function t2() {
        for (const [_a, b] of [['key', 1]]) {}
                        ~
!!! error TS6133: 'b' is declared but its value is never read.
    
        for (const [a, _b] of [['key', 1]]) {}
                    ~
!!! error TS6133: 'a' is declared but its value is never read.
    
        for (const [a, b] of [['key', 1]]) {}
             ~~~~~~~~~~~~
!!! error TS6199: All variables are unused.
    }
    
    function t3() {
        for (const [[[_a, b]]] of [[[['key', 1]]]]) {}
                          ~
!!! error TS6133: 'b' is declared but its value is never read.
    
        for (const [[[a, _b]]] of [[[['key', 1]]]]) {}
                      ~
!!! error TS6133: 'a' is declared but its value is never read.
    
        for (const [[[a, b]]] of [[[['key', 1]]]]) {}
             ~~~~~~~~~~~~~~~~
!!! error TS6199: All variables are unused.
    }
    